--- a/app/src/main/res/drawable/tab_right.xml
+++ b/app/src/main/res/drawable/tab_right.xml
@@ -4,10 +4,10 @@
     android:viewportWidth="112.66"
     android:viewportHeight="31.4">
   <path
-      android:pathData="m0,0.4v31h112.66c0,0 0.1,-0.26 -4.31,0C100.97,26.54 98.24,17.65 94.06,8.76 90.34,0.86 76,0 76,0Z"
+      android:pathData="M112.66,0.4L112.66,31.4L0,31.4c0,0 -0.1,-0.26 4.31,0C11.69,26.54 14.42,17.65 18.6,8.76 22.31,0.86 36.65,0 36.65,0Z"
       android:strokeLineJoin="round"
       android:strokeWidth="0.264583"
-      android:fillColor="#f2ece3"
+      android:fillColor="#b8c75e"
       android:strokeColor="#00000000"
       android:strokeLineCap="round"/>
 </vector>
